--- a/src/style/style.css
+++ b/src/style/style.css
@@ -15,9 +15,6 @@ input, button {
     border: none;
     outline: none;
 }
-.note-list__item button {
-    margin: 0 3px;
-}
 .note-list__item span {
     margin: 0 10px;
 }
@@ -31,7 +28,13 @@ input, button {
     color: grey;
     text-decoration: line-through;
 }
+.notes {
+    flex: 1;
+}
 .note-list__item {
+    font-size: 28px;
+    display: flex;
+    align-items: center;
     border: 1px solid rgb(71, 46, 46);
     background: rgb(118, 235, 107);
     padding: 15px;
@@ -44,19 +47,36 @@ input, button {
 }
 .complete {
     background: url(../img/icons/list.svg) no-repeat center;
-    width: 25px;
+    padding: 0;
+    width: 30px;
     height: 30px;
 }
 .remove {
     background: url(../img/icons/delete.svg) no-repeat center;
-    width: 25px;
+    padding: 0;
+    width: 38px;
     height: 30px;
 }
 .edit {
     background: url(../img/icons/edit.svg) no-repeat center;
-    width: 25px;
+    padding: 0;
+    width: 38px;
     height: 30px;
 }
 .text_edit {
-    max-width: 200px;
+    max-width: 180px;
+}
+.save {
+    background: url(../img/icons/save.svg) no-repeat center;
+    width: 38px;
+    height: 30px;
+    padding: 0;
+    margin: 0 0 0 5px;
+}
+.cancel {
+    background: url(../img/icons/close.svg) no-repeat center;
+    width: 38px;
+    height: 30px;
+    padding: 0;
+    margin: 0 0 0 5px;
 }
